--- a/wallet-sign-java-server/src/main/resources/application.yml
+++ b/wallet-sign-java-server/src/main/resources/application.yml
@@ -1,3 +1,22 @@
 spring:
   application:
     name: wallet-sign-server
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: password
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  jpa:
+    generate-ddl: true
+#    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+grpc:
+  server:
+    port:
+      9999
