--- a/wallet-sign-java-server/src/main/resources/application.yml
+++ b/wallet-sign-java-server/src/main/resources/application.yml
@@ -2,10 +2,12 @@ spring:
   application:
     name: wallet-sign-server
   datasource:
-    url: jdbc:h2:mem:testdb
     username: sa
     password: password
     driver-class-name: org.h2.Driver
+#    memory-database
+#    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:./db/testdb;AUTO_SERVER=TRUE;
   h2:
     console:
       enabled: true
