fix(strategy): 1.fix AlgorithmStrategy

--- a/wallet-sign-java-server/pom.xml
+++ b/wallet-sign-java-server/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>wallet-sign-java-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+            <version>1.78.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -61,6 +68,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>xyz.dapplink.server.WalletSignJavaServerApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
