fix(optimize): 1.to optimize Hikari options

--- a/wallet-sign-java-server/src/main/resources/application.yml
+++ b/wallet-sign-java-server/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: wallet-sign-server
   datasource:
+    hikari:
+      minimum-idle: 10
+      idle-timeout: 30000
+      maximum-pool-size: 20
+      max-lifetime: 120000
+      connection-timeout: 30000
     username: sa
     password: password
     driver-class-name: org.h2.Driver
