--- a/wallet-sign-java-server/src/main/resources/application.yml
+++ b/wallet-sign-java-server/src/main/resources/application.yml
@@ -1,26 +1,10 @@
 spring:
   application:
     name: wallet-sign-server
-  datasource:
-    hikari:
-      minimum-idle: 10
-      idle-timeout: 30000
-      maximum-pool-size: 20
-      max-lifetime: 120000
-      connection-timeout: 30000
-    username: sa
-    password: password
-    driver-class-name: org.h2.Driver
-#    memory-database
-#    url: jdbc:h2:mem:testdb
-    url: jdbc:h2:./db/testdb;AUTO_SERVER=TRUE;
-  jpa:
-    generate-ddl: true
-#    database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: true
-    hibernate:
-      ddl-auto: update
 grpc:
   server:
     port:
       9999
+levelDB:
+  db-path:
+    ./wallet
